--- a/prostate/tumor.yaml
+++ b/prostate/tumor.yaml
@@ -8,10 +8,10 @@ log_dir: logs
 seed: 42
 device: 'cuda:1'
 data:
-  data_dir: prostate158
-  train_csv: prostate158/train.csv
-  valid_csv: prostate158/valid.csv
-  test_csv: prostate158/test.csv
+  data_dir: /kaggle/input/prostate158/prostate_data
+  train_csv: /kaggle/input/prostate158/prostate_data/train.csv
+  valid_csv: /kaggle/input/prostate158/prostate_data/valid.csv
+  test_csv: /kaggle/input/prostate158/prostate_data/test.csv
   # col names of the image and label files. Pass multiple names as list
   image_cols: [t2, adc, dwi]
   label_cols: adc_tumor_reader1
